Made broken lines visible in Opera, and a couple of other cross-browser compatibility fixes.

--- a/app/assets/stylesheets/ideas.css.scss
+++ b/app/assets/stylesheets/ideas.css.scss
@@ -165,6 +165,7 @@ h1 {
   border-width: 6px;
   -moz-border-image:url("/assets/border-double-dotted.png") 0 0 6 0 repeat;
   -webkit-border-image:url("/assets/border-double-dotted.png") 0 0 6 0 repeat;
+  -o-border-image:url("/assets/border-double-dotted.png") 0 0 6 0 repeat;
   border-image:url("/assets/border-double-dotted.png") 0 0 6 0 repeat;
   border-top: none;
   border-left: 0 none;
